# jobs-portal-django

./: .gitignore  Makefile  manage.py  pyproject.toml  requirements.txt
bash/: make_env_prod.sh
jobs_portal/: asgi.py  urls.py  wsgi.py
jobs_portal/settings/: base.py  colored_terminal.py  dev.py  prod.py
static/css/: style.css
static/css/libs/: flaticon.css  themify-icons.css
static/css/pages/: home.css  job-edit.css  login.css
website/: admin.py  forms.py  models.py  urls.py  views.py
website/templates/website/account/: login.html  logout.html  signup.html
website/templates/website/pages/: contact.html  home.html  job_add.html  job_edit.html  job_single.html  jobs.html
website/templates/website/parts/: base.html  header.html  nav.html
