[project]
name = "jobs-portal"
version = "0.1.0"
description = ""
authors = [
    {name = "stanislav",email = "stanislav.djangodeveloper@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-browser-reload (>=1.21.0,<2.0.0)",
    "django-allauth (>=65.13.1,<66.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "django-environ (>=0.12.0,<0.13.0)"
]

[tool.poetry]
package-mode=false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
